feat: create basic helm chart
